--- a/SearcheyMcSearchface/packages.config
+++ b/SearcheyMcSearchface/packages.config
@@ -2,9 +2,13 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging" version="2.3.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
+  <package id="Lucene.Net.Linq" version="3.5.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
@@ -28,6 +32,13 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Remotion.Linq" version="1.13.183.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
+  <package id="Stanford.NLP.CoreNLP" version="3.6.0.0" targetFramework="net452" />
+  <package id="Stanford.NLP.NER" version="3.6.0.0" targetFramework="net452" />
+  <package id="Stanford.NLP.Parser" version="3.6.0.0" targetFramework="net452" />
+  <package id="Stanford.NLP.POSTagger" version="3.6.0.0" targetFramework="net452" />
+  <package id="Stanford.NLP.Segmenter" version="3.6.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
