--- a/SearcheyMcSearchface/Web.config
+++ b/SearcheyMcSearchface/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=BG-832Q762\SQLEXPRESS;Initial Catalog=aspnet-SearcheyMcSearchface-20160519123926;Integrated Security=True; User Id=mcsearch Password=mcsearch" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=BG-832Q762\SQLEXPRESS;Initial Catalog=SearcheyMcSearchface;Integrated Security=False; User Id=mcsearch; Password=searchMcfacey#" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
