--- a/SearcheyMcSearchface/packages.config
+++ b/SearcheyMcSearchface/packages.config
@@ -9,6 +9,7 @@
   <package id="jQuery" version="2.2.3" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
+  <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net452" />
   <package id="Lucene.Net.Linq" version="3.5.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
