--- a/SearcheyMcSearchface/SearcheyMcSearchface.csproj
+++ b/SearcheyMcSearchface/SearcheyMcSearchface.csproj
@@ -388,6 +388,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DocumentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SearchAdminController.cs" />
@@ -397,6 +398,7 @@
     </Compile>
     <Compile Include="LuceneSearch.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DocumentViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\SearchResultViewModel.cs" />
@@ -470,6 +472,8 @@
     <Content Include="Views\Index.cshtml" />
     <Content Include="Views\MostImportantTerms.cshtml" />
     <Content Include="Views\Shared\_SearchResult.cshtml" />
+    <Content Include="Views\Document\Index.cshtml" />
+    <Content Include="Views\Shared\_Tags.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
