--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,5 @@ ModelManifest.xml
 SearcheyMcSearchface/lucene_index/_0.cfs
 SearcheyMcSearchface/lucene_index/segments.gen
 SearcheyMcSearchface/lucene_index/segments_2
+SearcheyMcSearchface/lucene_index/_1.cfs
+SearcheyMcSearchface/lucene_index/segments_4
